--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<link rel="stylesheet" href="css/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/styles.css">
 	<title>Welcome to Chatty!</title>
 </head>
 <body>
-	<div id="app">
-	<div/>
+	<div id="app"><div/>
 	<script src="/socket.io/socket.io.js"></script>
     <script src="js/app.js"></script>
 </body>
